From Imran(angular components commit)

--- a/src/app/components/Patient-Components/patient-register/patient-register.component.html
+++ b/src/app/components/Patient-Components/patient-register/patient-register.component.html
@@ -11,10 +11,10 @@
 <body align="center">
     <div class="container">
         <div class="nav">
-            <a href="#">HOME</a>
-            <a href="#">CONTACT US</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">LOGIN</a>
+            <a href="">HOME</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+            <a href="loginPage">LOGIN</a>
         </div>
         <br>
         <h4>REGISTRATION SECTION</h4>
@@ -156,7 +156,7 @@
     <footer>
         <div align="center">
             <br>
-            <span class="findUs">FIND US VIA:</span><a href="https://twitter.com/?lang=en"><svg
+            <h5 class = "findUs">FIND US VIA:</h5><a href="https://twitter.com/?lang=en"><svg
                     xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-twitter"
                     viewBox="0 0 16 16">
                     <path
