--- a/src/app/components/Doctor-Components/doctor-login/doctor-login.component.html
+++ b/src/app/components/Doctor-Components/doctor-login/doctor-login.component.html
@@ -1,1 +1,71 @@
-<p>doctor-login works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <div class="nav">
+            <a href="">HOME</a>
+            <a href="#">CONTACT US</a>
+            <a href="#">ABOUT US</a>
+            <a href="#">SIGN UP</a>
+        </div>
+        <br>
+        <br>
+        <h4>LOGIN SECTION</h4>
+        <br>
+        <form novalidate [formGroup]="doctorLoginForm" (ngSubmit)="loginDoctor()">
+            <fieldset>
+                <table>
+                    <tr>
+                        <th>USER ID</th>
+                        <th>:</th>
+                        <th><input type="text" placeholder="Enter your user Id" formControlName="doctorId">
+                        <th
+                            *ngIf="doctorLoginForm.get('doctorId').hasError('required') && doctorLoginForm.get('doctorId').touched">
+                            <span class="mandatory">*Email is required for login</span>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>PASSWORD</th>
+                        <th>:</th>
+                        <th><input type="password" placeholder="Enter your password" formControlName="password"><span
+                                class="mandatory"></span></th>
+                        <th
+                            *ngIf="doctorLoginForm.get('password').hasError('required') && doctorLoginForm.get('password').touched">
+                            <span class="mandatory">*Password is mandatory for login</span>
+                        </th>
+
+                   </tr>
+                   </table>
+                <br>
+                <button class="buttons" type="submit">LOGIN</button>
+                <br>
+                <br>
+                forgot password?<a href = "" class = "buttons">CLICK HERE</a>
+            </fieldset>
+        </form>
+        
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</body>
+
