--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -1,1 +1,75 @@
-<p>doctor-dash-board works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <span class="nav">
+            <a href="">HOME</a>
+            <a href="doctorDashboard">DASHBOARD</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+        </span>
+        <br>
+        <br>
+        <h5>Welcome,</h5>
+        <br>
+        <br>
+        <div style="background-color: whitesmoke;">
+            <div class="row">
+                <div class="col-sm-4" style="background-color:whitesmoke;">
+                    <h5 class="skyblue">ALLOCATE MEDICINES</h5>
+                    <br>
+                    Medicines alloted by doctor will be available here.
+                    Note that medicines only available after you have consulted
+                    with one of our doctors.
+                    <br>
+                    <br>
+                    <a class="buttons" href="addMedicines">CLICK HERE</a>
+                    <br>
+                    <br>
+                </div>
+                <div class="col-sm-4" style="background-color:whitesmoke;">
+                    <h5 class="skyblue">ALL APPOINTMENTs</h5>
+                    <br>
+                    Book an appointment for consulting with one of our specialists
+                    through our website, you can book for both offline and online
+                    consultancy
+                    <br>
+                    <br>
+                    <a class="buttons" href="getAppointments">CLICK HERE</a>
+                    <br>
+                    <br>
+                </div>
+                <div class="col-sm-4" style="background-color:whitesmoke;">
+                    <h5 class="skyblue">VIEW MY DETAILS</h5>
+                    <br>
+                    Click the button below to see your details
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <a class="buttons" href="viewDoctorDetailsPage">VIEW DETAILS</a>
+                    <br>
+                    <br>
+                </div>
+            </div>
+        </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+</body>
+        
