--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,8 +16,8 @@
             <a href = "registerPage">SIGN UP</a>
             <a href="loginPage">LOGIN</a>
             <span class="headerRight">
-                <a href = "#">DOCTOR LOGIN</a>
-                <a href = "#">ADMIN LOGIN</a>
+                <a href = "doctorLoginPage">DOCTOR LOGIN</a>
+                <a href = "adminLoginPage">ADMIN LOGIN</a>
             </span>
         </span>
         </div>
@@ -31,7 +31,7 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="E:\html\images\Dellxps.jpg" alt="First slide">
+                <img class="d-block w-100" src="..." alt="First slide">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="..." alt="Second slide">
