--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <footer>
   <div align="center">
       <br>
-      <h5 class = "findUs">FIND US VIA:</h5><a href="https://twitter.com/?lang=en"><svg
+      <h5 class = "findUs">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FIND US VIA :</h5><a href="https://twitter.com/?lang=en"><svg
               xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-twitter"
               viewBox="0 0 16 16">
               <path
