--- a/src/app/components/Patient-Components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/components/Patient-Components/patient-dashboard/patient-dashboard.component.html
@@ -11,7 +11,7 @@
 <body align="center">
     <div class="container">
         <span class="nav">
-            <a href="">HOME</a>
+            <a routerLink="#">HOME</a>
             <a href="patientDashboard">DASHBOARD</a>
             <a href="contactUsPage">CONTACT US</a>
             <a href="aboutUsPage">ABOUT US</a>
@@ -55,7 +55,7 @@
                     <br>
                     <br>
                     <br>
-                    <a class="buttons" href="viewDetailsPage">VIEW DETAILS</a>
+                    <a class="buttons" href="viewDetailsPage" >VIEW DETAILS</a>
                     <br>
                     <br>
                 </div>
@@ -71,7 +71,7 @@
         <br>
         <br>
         <br>
-        <footer>
+        <!-- <footer>
             <div align="center">
                 <br>
                 <h5 class = "findUs">FIND US VIA:</h5><a href="https://twitter.com/?lang=en"><svg
@@ -94,5 +94,5 @@
                 <br>
                 <br>
             </div>
-        </footer>
+        </footer> -->
         
