--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,10 +11,10 @@
 <body align="center">
     <div class="container">
         <span class="nav">
-            <a href="contactUsPage">CONTACT US</a>
-            <a href="aboutUsPage">ABOUT US</a>
-            <a href = "registerPage">SIGN UP</a>
-            <a href="loginPage">LOGIN</a>
+            <a routerLink="contactUsPage">CONTACT US</a>
+            <a routerLink="aboutUsPage">ABOUT US</a>
+            <a routerLink = "registerPage">SIGN UP</a>
+            <a routerLink="loginPage">LOGIN</a>
             <span class="headerRight">
                 <a href = "#">DOCTOR LOGIN</a>
                 <a href = "#">ADMIN LOGIN</a>
@@ -98,7 +98,7 @@
         <br>
         <br>
         <br>
-        <footer>
+        <!-- <footer>
             <div align="center">
                 <br>
                 <span class="findUs">FIND US VIA:</span><a href="https://twitter.com/?lang=en"><svg
@@ -121,7 +121,7 @@
                 <br>
                 <br>
             </div>
-        </footer>
+        </footer> -->
 
         </body>
        
