--- a/src/app/components/Patient-Components/view-account/view-account.component.html
+++ b/src/app/components/Patient-Components/view-account/view-account.component.html
@@ -1,1 +1,25 @@
-<p>view-account works!</p>
+<h1> Details</h1>
+
+<div>
+    <!-- <font color=red>{{ errorMessage }}</font>
+    <h2 align="center">
+      <font color=green>{{ successMessage }}</font>
+    </h2> -->
+    <table align="center" cellspacing="10" cellpadding="10">
+     <tr><td>First Name</td>              :<td>{{patient.firstName}}  </td></tr>
+     <tr><td>Last Name</td>               : <td> {{patient.lastName}} </td></tr>
+     <tr><td>Email</td>                   : <td> {{patient.patientEmail}} </td></tr>
+     <tr><td>Alternate Email</td>         : <td> {{patient.alternateEmail}} </td></tr>
+     <tr><td>Password</td>                : <td> {{patient.password}} </td></tr>
+     <tr><td>Date of Birth</td>           : <td>{{patient.dateOfBirth}}  </td></tr>
+     <tr><td>Blood Group</td>             : <td> {{patient.bloodGroup}} </td></tr>
+     <tr><td>City</td>                    : <td>{{patient.city}}  </td></tr>
+     <tr><td>Phone Number</td>            : <td> {{patient.phoneNumber}} </td></tr>
+     <tr><td>Alternate Phone Number</td>  : <td>{{patient.alternatePhoneNumber}}  </td></tr>
+     <tr><td>Height</td>                  : <td> {{patient.patientHeight}} </td></tr>
+     <tr><td>Weight</td>                  : <td>{{patient.patientWeight}}  </td></tr>
+    </table>
+  </div>
+  <br />
+  <br />
+  <br />
