--- a/src/app/components/Patient-Components/appointment-success/appointment-success.component.html
+++ b/src/app/components/Patient-Components/appointment-success/appointment-success.component.html
@@ -1,1 +1,40 @@
-<p>appointment-success works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <div class="nav">
+            <a routerLink="">HOME</a>
+            <a routerLink="patientDashboard">DASHBOARD</a>
+            <a routerLink="aboutUsPage">ABOUT US</a>
+            <a routerLink="contactUsPage">CONTACT US</a>
+        </div>
+        <br>
+        <br>
+        <h5 class = "success">THANK YOU MAKING AN APPOINTMENT WITH US!!</h5>
+        <br>
+        <h5>YOUR APPOINTMENT WILL GET SCHEDULED AS PER OUR DOCTORS AVAILABILITY</h5>
+        <h6>
+            NOTE THAT YOU WILL RECEIVE MAILS FOR THE UPDATE OF YOUR APPOINTMENTS
+        </h6>
+        <br>
+        <button class = "buttons" (click) = "appointmentPage()">BOOK AN APPOINTMENT</button>
+        <button class = "buttons" (click) = "homepage()">GO TO DASHBOARD</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        </div>
+        </body>
