Commit by Imran

--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -26,9 +26,7 @@
                 <div class="col-sm-4" style="background-color:whitesmoke;">
                     <h5 class="skyblue">ALLOCATE MEDICINES</h5>
                     <br>
-                    Medicines alloted by doctor will be available here.
-                    Note that medicines only available after you have consulted
-                    with one of our doctors.
+                    Click the below button to allocate medicines for patient as per their email Id
                     <br>
                     <br>
                     <a class="buttons" href="addMedicines">CLICK HERE</a>
@@ -55,13 +53,28 @@
                     <br>
                     <br>
                     <br>
+                    <br>
                     <a class="buttons" href="viewDoctorDetailsPage">VIEW DETAILS</a>
                     <br>
                     <br>
                 </div>
+                <div class="col-sm-4" style="background-color:whitesmoke;">
+                    <h5 class="skyblue">VIEW ALL PATIENTS</h5>
+                    <br>
+                    Click the button below to see your details
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <a class="buttons" href="viewDoctorDetailsPage">VIEW DETAILS</a>
+                    <br>
+                    <br>
             </div>
+            
         </div>
-        </div>
+       </div>
+       
         <br>
         <br>
         <br>
@@ -71,5 +84,4 @@
         <br>
         <br>
         <br>
-</body>
         
