--- a/src/app/components/Doctor-Components/patient-list/patient-list.component.html
+++ b/src/app/components/Doctor-Components/patient-list/patient-list.component.html
@@ -1,1 +1,58 @@
-<p>patient-list works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <span class="nav">
+            <a href = "">HOME</a>
+            <a href ="doctorDashboard">DASHBOARD</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+        </span>
+        </div>
+        <br>
+        <br>
+        <input type = "email"><button class = "buttons" (click) = "getPatientByEmail()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+          </svg></button>
+        <h4>PATIENT LIST</h4>
+        <table class = "table">
+            <thead>
+                <th>EMAIL</th>
+                <th>NAME</th>
+                <th>PHONE NUMBER</th>
+                <th>CITY</th>
+                <th>LAST LOGGED IN</th>
+            </thead>
+            <tr>
+                <td>DATA</td>
+            </tr>
+            <tr>
+                <td>DATA</td>
+            </tr>
+            <tr>
+                <td>DATA</td>
+            </tr>
+            <tr>
+                <td>DATA</td>
+            </tr>
+            <tr>
+                <td>DATA</td>
+            </tr>
+            <tr>
+                <td><button class = "ignoreButton" (click)= "deletePatient()" >DELETE</button></td>
+            </tr>
+        </table>
+        <br>
+        <a href = "doctorDashboard">DASHBOARD</a>
+        <br>
+        <br>
+        <br>
+
