--- a/src/app/components/Patient-Components/appointment-success/appointment-success.component.html
+++ b/src/app/components/Patient-Components/appointment-success/appointment-success.component.html
@@ -18,7 +18,7 @@
         </div>
         <br>
         <br>
-        <h5 class = "success">THANK YOU MAKING AN APPOINTMENT WITH US!!</h5>
+        <h5 class = "success">THANK YOU FOR MAKING AN APPOINTMENT WITH US!!</h5>
         <br>
         <h5>YOUR APPOINTMENT WILL GET SCHEDULED AS PER OUR DOCTORS AVAILABILITY</h5>
         <h6>
@@ -27,6 +27,9 @@
         <br>
         <button class = "buttons" (click) = "appointmentPage()">BOOK AN APPOINTMENT</button>
         <button class = "buttons" (click) = "homepage()">GO TO DASHBOARD</button>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
