--- a/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.css
+++ b/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.css
@@ -28,18 +28,13 @@ h4{
     text-align: center;
 }
 
-table{
-    margin-left: 37%;
-}
 
-.table2{
-    margin-left: 27%;
-}
 
 th{
 	text-align:center;
-	padding: 5px;
+	padding: 10px;
     font-weight: 400;
+
 }
 
 .buttons {
@@ -59,6 +54,39 @@ th{
     border: 2px solid black;
 }
 
+.searchButtons{
+    align-content: center;
+	color:black;
+    background-color:skyblue;
+    text-decoration:none;;
+    border:none;
+    padding:5px 10px;
+    font-size:15px;
+    margin-right: 10px;
+}
+
+.searchButtons:hover{
+	color:black;
+    background-color:whitesmoke;
+    border: 2px solid black;
+}
+
+.deleteButtons{
+    align-content: center;
+	color:black;
+    background-color:skyblue;
+    text-decoration:none;;
+    border:none;
+    padding:5px 10px;
+    font-size:15px;
+    margin-right: 10px;
+}
+
+.deleteButtons:hover{
+    color:white;
+    background-color: red;
+}
+
 .mandatory{
     color:red;
 }
@@ -74,29 +102,4 @@ a{
     text-decoration: none;
     color:black;
     padding-left: 30px;
-}
-
-input[type = "text"]{
-    width: 200px;
-}
-
-input[type = "password"]{
-    width:200px;
-}
-
-.bloodGroup{
-    width:200px;
-}
-
-input[type = "email"]{
-    width:200px;
-}
-
-input[type = "date"]{
-    width: 200px;
-}
-
-.findUs{
-    font-weight: 500;
-    font-size: medium;
 }
