--- a/src/app/components/Doctor-Components/doctor-login/doctor-login.component.html
+++ b/src/app/components/Doctor-Components/doctor-login/doctor-login.component.html
@@ -24,7 +24,7 @@
             <fieldset>
                 <table>
                     <tr>
-                        <th>USER ID</th>
+                        <th>DOCTOR ID</th>
                         <th>:</th>
                         <th><input type="text" placeholder="Enter your user Id" formControlName="doctorId">
                         <th
