--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -67,7 +67,7 @@
                     <br>
                     <br>
                     <br>
-                    <a class="buttons" href="viewDoctorDetailsPage">VIEW DETAILS</a>
+                    <a class="buttons" (click)="getAllPatients()">VIEW DETAILS</a>
                     <br>
                     <br>
             </div>
