added contact us and about us in angular

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,10 +11,10 @@
 <body align="center">
     <div class="container">
         <span class="nav">
-            <a routerLink="contactUsPage">CONTACT US</a>
-            <a routerLink="aboutUsPage">ABOUT US</a>
-            <a routerLink = "registerPage">SIGN UP</a>
-            <a routerLink="loginPage">LOGIN</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+            <a href = "registerPage">SIGN UP</a>
+            <a href="loginPage">LOGIN</a>
             <span class="headerRight">
                 <a href = "doctorLoginPage">DOCTOR LOGIN</a>
                 <a href = "adminLoginPage">ADMIN LOGIN</a>
@@ -35,6 +35,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class = "imageText">HEALTH PLUS HOSPITAL</h5>
                   <p class = "imageText">India's Third Largest Hospital</p>
+                  
                 </div>
               </div>
               <div class="carousel-item">
