--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,62 @@
-<p>about-us works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <span class="nav">
+            <a href="">HOME</a>
+            <a href="loginPage">LOGIN</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+        </span>
+        <div class = "container">
+            <br>
+            <h4 style = "background-color: skyblue;">ABOUT US</h4>
+            <br>
+            <p>Health Plus Hospitals Enterprise Limited is an Indian multinational hospital chain headquartered in Chennai, Tamil Nadu, India. It was founded by Prathap C. Reddy in 1983 as the first corporate healthcare provider in India. Several of the Apollo's hospitals have been among the first in India to receive international healthcare accreditation by the America-based Joint Commission International (JCI) [3][4] as well as 13 NABH National Accreditation Board for Hospitals & Healthcare Providers hospitals.[5] In addition to providing hospitals, Apollo has developed services in telemedicine, after starting a pilot project in 2000 at Aragonda, Prathap Reddy's home village.[6] Apollo signed an MoU with Health Education England in April 2017 to provide a large number of doctors to fill vacancies in the English National Health Service.[7]</p>
+            <br>
+        <div>
+        <div class="row">
+            <div class="col-sm-4">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="115" height="115"><path fill-rule="evenodd" d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1zM2.513 11.5h4.745c.1-3.037 1.1-5.49 2.093-7.204.39-.672.78-1.233 1.119-1.673C6.11 3.329 2.746 7 2.513 11.5zm4.77 1.5H2.552a9.505 9.505 0 007.918 8.377 15.698 15.698 0 01-1.119-1.673C8.413 18.085 7.47 15.807 7.283 13zm1.504 0h6.426c-.183 2.48-1.02 4.5-1.862 5.951-.476.82-.95 1.455-1.304 1.88L12 20.89l-.047-.057a13.888 13.888 0 01-1.304-1.88C9.807 17.5 8.969 15.478 8.787 13zm6.454-1.5H8.759c.1-2.708.992-4.904 1.89-6.451.476-.82.95-1.455 1.304-1.88L12 3.11l.047.057c.353.426.828 1.06 1.304 1.88.898 1.548 1.79 3.744 1.89 6.452zm1.476 1.5c-.186 2.807-1.13 5.085-2.068 6.704-.39.672-.78 1.233-1.118 1.673A9.505 9.505 0 0021.447 13h-4.731zm4.77-1.5h-4.745c-.1-3.037-1.1-5.49-2.093-7.204-.39-.672-.78-1.233-1.119-1.673 4.36.706 7.724 4.377 7.957 8.877z"></path></svg>                <br>
+                <br>
+                <h5 class = "skyblue">WE ARE WORLD WIDE</h5>
+                <p>We are a world wide organization</p>
+                <p>We are having hospitals over 30+ countries</p>
+                <p>Largest in India and 57th postion in world wide</p>    
+            </div>
+            <div class="col-sm-4">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="115" height="115"><path fill-rule="evenodd" d="M12 2.5a5.5 5.5 0 00-3.096 10.047 9.005 9.005 0 00-5.9 8.18.75.75 0 001.5.045 7.5 7.5 0 0114.993 0 .75.75 0 101.499-.044 9.005 9.005 0 00-5.9-8.181A5.5 5.5 0 0012 2.5zM8 8a4 4 0 118 0 4 4 0 01-8 0z"></path></svg>
+                <br>
+                <br>
+                <h5 class = "skyblue">DOCTORS</h5>
+                <p>We have the best in industry and experienced doctors</p>
+                <p>The Doctors are specialized in each specialiteis</p>
+                <p></p>
+            </div>
+            <div class="col-sm-4">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="115" height="115"><path d="M12 13.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"></path><path fill-rule="evenodd" d="M19.071 3.429C15.166-.476 8.834-.476 4.93 3.429c-3.905 3.905-3.905 10.237 0 14.142l.028.028 5.375 5.375a2.359 2.359 0 003.336 0l5.403-5.403c3.905-3.905 3.905-10.237 0-14.142zM5.99 4.489A8.5 8.5 0 0118.01 16.51l-5.403 5.404a.859.859 0 01-1.214 0l-5.378-5.378-.002-.002-.023-.024a8.5 8.5 0 010-12.02z"></path></svg>
+                <br>
+                <br>
+                <h5 class = "skyblue">LOCATIONS</h5>
+                <p>No:15D,Health plus Hospital,Chennai-18
+                </p>
+                <p>Booking appointments Facilities</p>
+                <p>Offline booking also available</p>    
+            </div>
+            <br>
+            <hr>
+            <br>
+            Health Plus Hospital is a health care institution providing patient treatment with specialized medical and nursing staff and medical equipment.[1] The best-known type of hospital is the general hospital, which typically has an emergency department to treat urgent health problems ranging from fire and accident victims to a sudden illness. A district hospital typically is the major health care facility in its region, with many beds for intensive care and additional beds for patients who need long-term care. Specialized hospitals include trauma centers, rehabilitation hospitals, children's hospitals, seniors' (geriatric) hospitals, and hospitals for dealing with specific medical needs such as psychiatric treatment (see psychiatric hospital) and certain disease categories. Specialized hospitals can help reduce health care costs compared to general hospitals.[2] Hospitals are classified as general, specialty, or government depending on the sources of income received.
+
+A teaching hospital combines assistance to people with teaching to medical students and nurses. A medical facility smaller than a hospital is generally called a clinic. Hospitals have a range of departments (e.g. surgery and urgent care) and specialist units such as cardiology. Some hospitals have outpatient departments and some have chronic treatment units. Common support units include a pharmacy, pathology, and radiology.
+        </div>
+        <br>
+        <br>
