--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,1 +1,61 @@
-<p>contact-us works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <span class="nav">
+            <a href="">HOME</a>
+            <a href="loginPage">LOGIN</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+        </span>
+        <br>
+        <br>
+        <h5>PLEASE PROVIDE US YOUR INFORMATION SO THAT WE CAN GET BACK TO YOU</h5>
+        <BR>
+            <H4>PLEASE FILL THIS FORM</H4>
+            <br>
+        <table align = "center">
+            <tr>
+                <th>FIRST NAME</th>
+                <th>:</th>
+                <th><input type="text" placeholder="Enter your first name...">
+                </th>
+            </tr>
+            <tr>
+                <th>LAST NAME</th>
+                <th>:</th>
+                <th><input type="text" placeholder="Enter your last name..." formControlName="lastName">
+              </th>
+
+            </tr>
+            <tr>
+                <th>EMAIL ID</th>
+                <th>:</th>
+                <th><input type="email" placeholder="Enter you mail id..." formControlName="patientEmail"></th>
+            </tr>
+            </table>
+<br>
+<br>
+            <a class = "buttons" href = "">SUBMIT DETAILS</a>
+            <a class = "buttons" href = "">HOME</a>
+        
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        </div>
+        </body>
+        
