admin and doctor

--- a/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.html
+++ b/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.html
@@ -46,6 +46,21 @@
                     <th>
                         BLOOD GROUP
                     </th>
+                    <!-- <th>
+                        DATE OF BIRTH
+                    </th>
+                    <th>
+                        ALTERNATE PHONE NUMBER
+                    </th>
+                    <th>
+                        ALTERNATE EMAIL 
+                    </th>
+                    <th>
+                        WEIGHT
+                    </th>
+                    <th>
+                        HEIGHT
+                    </th> -->
                     <th>
                         ACTIONS
                     </th>
@@ -55,13 +70,23 @@
                
                     <td>{{patient.patientEmail}}</td>
                 
-                    <td>{{patient.firstName}}</td>
+                    <td>{{patient.firstName}} {{patient.lastName}}</td>
                 
                     <td>{{patient.phoneNumber}}</td>
                 
                     <td>{{patient.city}}</td>
                 
                     <td>{{patient.bloodGroup}}</td>
+
+                    <!-- <td>{{patient.dateOfBirth}}</td>
+
+                    <td>{{patient.alternatePhoneNumber}}</td>
+
+                    <td>{{patient.alternateEmail}}</td>
+
+                    <td>{{patient.patientWeight}}</td>
+
+                    <td>{{patient.patientHeight}}</td> -->
                
                     <td><button class = "deleteButtons" (click) = "deletePatient(patient.patientEmail)" >DELETE</button>
                     </td>
