--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -54,7 +54,7 @@
                     <br>
                     <br>
                     <br>
-                    <a class="buttons" href="viewDoctorDetailsPage">VIEW DETAILS</a>
+                    <a class="buttons" href="doctorDetails">VIEW DETAILS</a>
                     <br>
                     <br>
                 </div>
