--- a/src/app/components/Admin-Components/doctor-list/doctor-list.component.html
+++ b/src/app/components/Admin-Components/doctor-list/doctor-list.component.html
@@ -1,1 +1,103 @@
-<p>doctor-list works!</p>
+<header>
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone">
+        <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+        </path>
+    </svg>
+    - 044-2388 0477
+</header>
+
+<body align="center">
+    <div class="container">
+        <span class="nav">
+            <a href="">HOME</a>
+            <a href="adminDashboard">DASHBOARD</a>
+            <a href="contactUsPage">CONTACT US</a>
+            <a href="aboutUsPage">ABOUT US</a>
+        </span>
+        <br>
+        <br>
+        <input type = "email" placeholder="Enter email Id"><button class = "searchButtons" > SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+          </svg></button>
+          <br>
+          <br>
+          <!-- <p style = "color:red">{{deleteMessage}}</p>
+          <p style = "color:red">{{errorMessage}}</p> -->
+        <h4>DOCTOR LIST</h4>
+        <br>
+
+            <table class = "table">
+                <thead>
+                    <tr>
+                    <th>
+                        ID
+                    </th>
+                    <th>
+                        NAME
+                    </th>
+                    <th>
+                        SPECIALIZATION
+                    </th>
+                    <th>
+                        QUALIFICATION
+                    </th>
+                    <th>
+                        EXPERIENCE
+                    </th>
+                    <th>
+                        PHONE NUMBER
+                    </th>
+                    <th>
+                        EMAIL
+                    </th>
+                    <th>
+                        ACTIONS
+                    </th>
+                    </tr>
+                </thead>
+                <tr *ngFor = "let doctor of doctorList">
+               
+                    <td>{{doctor.doctorId}}</td>
+                
+                    <td>{{doctor.doctorName}}</td>
+                
+                    <td>{{doctor.specializationId}}</td>
+                
+                    <td>{{doctor.qualification}}</td>
+                
+                    <td>{{doctor.experience}}</td>
+
+                    <td>{{doctor.phoneNumber}}</td>
+
+                    <td>{{doctor.email}}</td>
+               
+                    <td><button class = "deleteButtons" >DELETE</button>
+                    </td>
+                    
+                    
+                </tr>
+               
+            </table>
+            <br>
+            <a class = "buttons" href = "adminDashBoard">GO TO DASHBOARD</a>
+            <a class = "buttons" href = "">HOME</a>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <br>
+        <br>
+        <br>
+
